scribble-cli/src/test/resources/good/misc/globals/gprotocoldecl/GProtocolDecl02.scr
module good.misc.globals.protocoldecl.GProtocolDecl02;


global protocol GProtocolDecl2(role A, role B, role C)
{
	1() from A to B;
	do GProtocolDecl2a(A, C);
}

global protocol GProtocolDecl2a(role D, role E)
{
	2() from D to E;
}